--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,33 @@
-.header{
+.navbar {
+    width: 100%;
     background-color: rgb(235, 195, 64);
-}
+    overflow: auto;
+  }
+  
+ 
+  .navbar a {
+    float: left;
+    text-align: center;
+    padding: 12px;
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
+  }
+  
+
+  .navbar a:hover {
+    background-color: #000;
+  }
+  
+
+  .active {
+    background-color: #04AA6D;
+  }
+  
+  
+  @media screen and (max-width: 500px) {
+    .navbar a {
+      float: none;
+      display: block;
+    }
+  }
