--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,11 @@
-.navbar {
+.header {
     width: 100%;
     background-color: rgb(235, 195, 64);
     overflow: auto;
+    position: sticky;
+    top: 0px;
+    z-index: 1;
+    display: block;
   }
   
  
@@ -20,11 +24,7 @@
   }
   
 
-  .active {
-    background-color: #04AA6D;
-  }
-  
-  
+
   @media screen and (max-width: 500px) {
     .navbar a {
       float: none;
