--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -24,7 +24,7 @@
         z-index: 1;
       }
       
-.tasks {
+.task {
     background-color: rgb(235, 195, 64);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
