Fixed values to show

--- a/src/components/Tasks/TasksList.css
+++ b/src/components/Tasks/TasksList.css
@@ -1,5 +1,6 @@
 .table {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     overflow-y: auto;
     background-color: black;
